// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AspectRatioBox renders: for aspectRatio={1} 1`] = `
<AspectRatioBox
  aspectRatio={1}
  overrides={Object {}}
>
  <ForwardRef
    $aspectRatio={1}
    data-baseweb="aspect-ratio-box"
  >
    <MockStyledComponent
      $aspectRatio={1}
      data-baseweb="aspect-ratio-box"
      forwardedRef={null}
    >
      <div
        data-baseweb="aspect-ratio-box"
        styled-component="true"
        test-style={
          Object {
            "::after": Object {
              "clear": "both",
              "content": "\\"\\"",
              "display": "table",
            },
            "::before": Object {
              "content": "\\"\\"",
              "float": "left",
              "height": 0,
              "marginLeft": "-1px",
              "paddingTop": "100%",
              "pointerEvents": "none",
              "width": "1px",
            },
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <ForwardRef>
          <MockStyledComponent
            forwardedRef={null}
          >
            <div
              styled-component="true"
              test-style={
                Object {
                  "bottom": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </MockStyledComponent>
        </ForwardRef>
      </div>
    </MockStyledComponent>
  </ForwardRef>
</AspectRatioBox>
`;

exports[`AspectRatioBox renders: for aspectRatio={16 / 9} 1`] = `
<AspectRatioBox
  aspectRatio={1.7777777777777777}
  overrides={Object {}}
>
  <ForwardRef
    $aspectRatio={1.7777777777777777}
    data-baseweb="aspect-ratio-box"
  >
    <MockStyledComponent
      $aspectRatio={1.7777777777777777}
      data-baseweb="aspect-ratio-box"
      forwardedRef={null}
    >
      <div
        data-baseweb="aspect-ratio-box"
        styled-component="true"
        test-style={
          Object {
            "::after": Object {
              "clear": "both",
              "content": "\\"\\"",
              "display": "table",
            },
            "::before": Object {
              "content": "\\"\\"",
              "float": "left",
              "height": 0,
              "marginLeft": "-1px",
              "paddingTop": "56.25%",
              "pointerEvents": "none",
              "width": "1px",
            },
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <ForwardRef>
          <MockStyledComponent
            forwardedRef={null}
          >
            <div
              styled-component="true"
              test-style={
                Object {
                  "bottom": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </MockStyledComponent>
        </ForwardRef>
      </div>
    </MockStyledComponent>
  </ForwardRef>
</AspectRatioBox>
`;

exports[`AspectRatioBox renders: with overridden styles 1`] = `
<AspectRatioBox
  aspectRatio={1.7777777777777777}
  overrides={
    Object {
      "Body": Object {
        "style": Object {
          "color": "red",
        },
      },
      "Root": Object {
        "style": Object {
          "marginBottom": "10px",
        },
      },
    }
  }
>
  <ForwardRef
    $aspectRatio={1.7777777777777777}
    $style={
      Object {
        "marginBottom": "10px",
      }
    }
    data-baseweb="aspect-ratio-box"
  >
    <MockStyledComponent
      $aspectRatio={1.7777777777777777}
      $style={
        Object {
          "marginBottom": "10px",
        }
      }
      data-baseweb="aspect-ratio-box"
      forwardedRef={null}
    >
      <div
        data-baseweb="aspect-ratio-box"
        styled-component="true"
        test-style={
          Object {
            "::after": Object {
              "clear": "both",
              "content": "\\"\\"",
              "display": "table",
            },
            "::before": Object {
              "content": "\\"\\"",
              "float": "left",
              "height": 0,
              "marginLeft": "-1px",
              "paddingTop": "56.25%",
              "pointerEvents": "none",
              "width": "1px",
            },
            "marginBottom": "10px",
            "position": "relative",
            "width": "100%",
          }
        }
      >
        <ForwardRef
          $style={
            Object {
              "color": "red",
            }
          }
        >
          <MockStyledComponent
            $style={
              Object {
                "color": "red",
              }
            }
            forwardedRef={null}
          >
            <div
              styled-component="true"
              test-style={
                Object {
                  "bottom": 0,
                  "color": "red",
                  "position": "absolute",
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </MockStyledComponent>
        </ForwardRef>
      </div>
    </MockStyledComponent>
  </ForwardRef>
</AspectRatioBox>
`;
